<resources>
    <string name="app_name">Animal Roadtrip</string>
    <string name="game_view_content_description">Game view</string> <!--  Needed for UnityPlayActivity  -->
    <string name="title_activity_user_menu">User name</string>
    <string name="title_selectgame">Select game</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="third_game_name">Explorer map</string>
    <string name="second_game_name">Jungle adventure</string>
    <string name="first_game_name">Marco Polo</string>
    <string name="barcode_mockup">BarCode mockup</string>
    <string name="access_without_qr">Access without scanning</string>
    <string name="error_scanning_code">Error while scanning code. Please, try again.</string>
    <string name="happiness">Happiness</string>
    <string name="happiness_question">How do you feel?</string>
    <string name="food">Food</string>
    <string name="food_question">How good did you eat?</string>
    <string name="pain">Pain</string>
    <string name="pain_question">Does it hurt?</string>
    <string name="app_info">App info</string>
    <string name="app_info_text">App info text</string>
    <string name="ok">OK!</string>
    <string name="select_language">Select language</string>
    <string name="choose_language">Choose language…</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="title_selectdificulty">Select difficulty</string>
    <string name="timer">Time</string>
    <string name="stop">Stop!</string>
    <string name="start">Start</string>
    <string name="marcopolo_info">Marco Polo game</string>
    <string name="marcopolo_info_text">Marco Polo game description</string>
    <string name="marcopolo_info_attribuition">Bird sound from \"Bird Whistling, Single, Robin, A.wav\" by InspectorJ (www.jshaw.co.uk) of Freesound.org</string>
    <string name="marcopolo">Marco Polo</string>
    <string name="privacy_title">Data collection</string>
    <string name="privacy_info_text">Usage data will be collected for medical purposes only.  This permision and data can be consulted, modified and/or deleted through the web logging in with the barcode number that is being used to log in on this app.  The only data that will be stored are the time expended on each game and the step count during that time, as well as the daily mood survey.</string>
    <string name="privacy_question">Do you accept the terms and conditions?</string>
    <string name="accept">Accept</string>

    <string name="reject">Reject</string>
    <string name="select_game">Select game</string>
    <string name="question_no_answer">Question without answer:</string>
    <string name="daily_statistics">Daily statistics</string>
    <string name="daily_steps">Daily steps</string>
    <string name="global_statistics">Global statistics</string>
    <string name="step_count_per_game">Step count per game</string>
    <string name="steps_and_time_per_day">Steps and time spent playing each day</string>
    <string name="survey_scores">Daily survey global results</string>
    <string name="daily_survey">Daily survey</string>
    <string name="minutes">Minutes</string>
    <string name="steps">Steps</string>
    <string name="play_mode">Select play mode</string>
    <string name="play_mode_info">Remember that you need someone to play with. One player will be the explorer and the other one will be the assistant.   Which one do you prefer?</string>
    <string name="explorer">Explorer</string>
    <string name="assistant">Assistant</string>
    <string name="title_activity_map_assistant">Clues</string>
    <string name="tab_sabana">Sabana</string>
    <string name="tab_northpole">North Pole</string>
    <string name="sabana_clues_info">Use these clues to guide your explorer through the map. Cheetah wants to get back the kite!</string>
    <string name="northpole_clues_info">Use these clues to guide your explorer through the map. Pingu needs to get home!</string>
    <string name="clue_northpole_seals">How many seals are there?</string>
    <string name="clue_northpole_hat_color">Which is the color of the wool hat?</string>
    <string name="clue_northpole_fire">Is the fire on or off?</string>
    <string name="northpole_clues_info_2">Remember: Pingu can only stay in each shape once!</string>
    <string name="sabana_clues_info_2">These clues are showing you what prize each animal wants. Get the items to trade with them, in return they will give you what you need!</string>
    <string name="server_error_message">There was an error while connecting to the server, please try again later.</string>
    <string name="no_internet_message">There is no Internet connection. If you\'d like to synchronise the data with the server, please check the device connection.</string>
    <string name="fourth_game_name">WakaMole</string>

    <string-array name="i8n_languages">
        <item>Choose language...</item>
        <item>Galego</item>
        <item>Castellano</item>
        <item>English</item>
    </string-array>
</resources>
