<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/marcopolo_activity"
    android:weightSum="10">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/grid_header"
            android:textSize="18sp"
            android:text="@string/title_selectdificulty"
            android:layout_centerInParent="true">
        </TextView>
    </RelativeLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:alignmentMode="alignMargins"
        android:columnCount="3"
        android:columnOrderPreserved="false"
        android:padding="8dp"
        android:rowCount="1">

        <androidx.cardview.widget.CardView
            android:id="@+id/easy_mode_cardview"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="#606EBB"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/easy"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/medium_mode_cardview"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="#805EBB"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/medium"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/hard_mode_cardview"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="#A653B4"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hard"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </GridLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:weightSum="10"
        android:orientation="vertical"
        android:layout_margin="64dp">

        <TextView
            android:id="@+id/timer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/timer"
            android:textAlignment="center"
            android:textSize="24sp" />

        <Chronometer
            android:id="@+id/chronometer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:textSize="38sp"
            android:textAlignment="center"
            android:textColor="@color/coloDarkGray"/>

        <Button
            android:id="@+id/stop_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:backgroundTint="#CCF43662"
            android:text="@string/start"
            android:textSize="32sp"
            android:elevation="8dp"/>
    </LinearLayout>

</LinearLayout>