<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_daily_statistics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/daily_statistics"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <!-- DAILY SURVEY INFO -->

        <TextView
            android:id="@+id/text_daily_survey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/daily_survey"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_daily_statistics" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/survey_info_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_daily_survey">

            <TextView
                android:id="@+id/text_happiness"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/happiness"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_food"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/food"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_pain"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/pain"
                android:textAlignment="center"
                android:textSize="16sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/survey_info_numbers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/survey_info_text"
            app:layout_constraintVertical_bias="0.0">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_happiness_face"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:tint="@color/colorGray"
                android:src="@drawable/ic_do_not_disturb"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_food_face"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:tint="@color/colorGray"
                android:src="@drawable/ic_do_not_disturb"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_pain_face"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:tint="@color/colorGray"
                android:src="@drawable/ic_do_not_disturb"/>

        </androidx.appcompat.widget.LinearLayoutCompat>


        <!-- STEPS PER GAME CHART -->
        <TextView
            android:id="@+id/text_daily_steps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/daily_steps"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/survey_info_numbers"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/text_daily_steps_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="0"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/text_daily_steps"
            app:layout_constraintTop_toBottomOf="@+id/survey_info_numbers"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/text_daily_chart_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/step_count_per_game"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_daily_steps" />

        <ImageView
            android:id="@+id/daily_chart"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="32dp"
            android:src="#CCC"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_daily_chart_title" />

        <View
            android:id="@+id/line"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/colorSuperLightGray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/daily_chart"
            app:layout_constraintTop_toBottomOf="@id/daily_chart" />

    <!-- GLOBAL STATISTICS -->
        <TextView
            android:id="@+id/text_global_statistics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/global_statistics"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/text_global_game_chart_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/time_per_game"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_global_statistics" />

        <ImageView
            android:id="@+id/global_game_chart"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:src="#CCC"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_global_game_chart_title" />

        <TextView
            android:id="@+id/text_global_survey_chart_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/survey_scores"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/global_game_chart" />

        <ImageView
            android:id="@+id/global_survey_chart"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:src="#CCC"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_global_survey_chart_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>